Manifests/dss.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelp-camp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yelp-camp
  template:
    metadata:
      labels:
        app: yelp-camp
    spec:
      containers:
        - name: yelp-camp-container
          image: manoj3003/pipelie-cicd:30
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: yelp-camp-storage
              mountPath: /opt
            - name: secrets
              mountPath: /opt/secrets
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
      volumes:
        - name: yelp-camp-storage
          persistentVolumeClaim:
            claimName: yelp-camp-pvc
        - name: secrets
          secret:
            secretName: yelp-camp-secrets
