Manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: yelp-camp-service
spec:
  selector:
    app: yelp-camp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
