Manifests/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: k8s-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /nginx(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: yelp-camp-service
#             port:
#               number: 3000
#       - path: /(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: yelp-camp-service
#             port:
#               number: 3000

# Host based ingress

apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: k8s-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: manoj.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yelp-camp-service
            port:
              number: 3000
